Added comment buttons

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .BlueGhostButton {
+    color: hsl(238, 40%, 52%);
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .RedGhostButton {
+    color: hsl(358, 79%, 66%);
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
